# low-dimensional-deepnets

./: compute_dist.py  get_geodesic.py  main.py  pyproject.toml  reparameterization.py  run_dataset_pipeline.py
configs/runs/: cifar10.yaml  cifar3.yaml  make_blobs.yaml  mnist.yaml  twomoons.yaml
notebooks/: plot_results.ipynb  subset_embedding_bsel.ipynb
utils/: constants.py  embed.py  load_models.py  plot.py
